--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 .sign-in {
-  max-width: 500px;
+  max-width: 400px;
   margin: 50px auto;
 }
 .sign-in input,
@@ -11,14 +11,23 @@ html, body {
   width: 100%;
   text-align: center;
   font-size: 3rem;
+  border: 4px solid #FF99C9;
+  background-color: #FEFFEA;
+  outline: none;
+  margin: 10px;
+  padding: 5px;
 }
 
 .sign-in button {
-  background-color: #DBD5B5;
-  border: none;
-  color: white;
-  font-size: 60px;
+  color: #FF99C9;
   line-height:2.5em;
+  box-sizing: content-box;
+}
+
+.sign-in button:hover {
+  color: #FEFFEA;
+  background-color: #FF99C9;
+  border: 4px solid #FF99C9;
 }
 
 .sign-in input, .sign-in button {
@@ -37,10 +46,10 @@ html, body {
 }
 
 .list-of-messages {
-  border: 5px solid #FF99C9;
+  border: 4px solid #FF99C9;
   font-family: 'Open Sans';
   font-size: 12px;
-  padding: 5px 15px;
+  padding: 4px 14px;
   display:flex;
   flex-direction: column;
   margin: 50px;
@@ -56,7 +65,7 @@ html, body {
 
 .message-form button {
   background-color: #FEFFEA;
-  border: 5px solid #FF99C9;
+  border: 4px solid #FF99C9;
   border-left: none;
   outline: none;
   color: #FF99C9;
@@ -67,14 +76,14 @@ html, body {
 .message-form button:hover {
   color: #FEFFEA;
   background-color: #FF99C9;
-  border: 5px solid #FF99C9;
+  border: 4px solid #FF99C9;
   border-left: none;
 }
 
 .message-form textarea {
-  border: 5px solid #FF99C9;
+  border: 4px solid #FF99C9;
   background-color: #FEFFEA;
-  padding: 12px 15px;
+  padding: 12px 14px;
   width:100%;
   font-family: 'Open Sans';
   font-size:12px;
@@ -86,16 +95,7 @@ html, body {
 }
 
 .message {
-  color: #FE5F55;
   font-size: 12px;
-}
-
-.hannah {
-  color: #FE5F55;
-}
-
-.ben {
-  color: #B4ADEA;
 }
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
