--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,24 +3,26 @@ html, body {
 }
 
 .sign-in {
-  max-width: 400px;
-  margin: 50px auto;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content:center;
 }
 .sign-in input,
 .sign-in button {
-  width: 100%;
+  width: 250px;
   text-align: center;
   font-size: 3rem;
   border: 4px solid #FF99C9;
   background-color: #FEFFEA;
   outline: none;
-  margin: 10px;
-  padding: 5px;
+  margin-top: 10px;
+  padding: 0px;
 }
 
 .sign-in button {
   color: #FF99C9;
-  line-height:2.5em;
+  line-height: 2.5em;
   box-sizing: content-box;
 }
 
